# serde_enabled

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: lib.rs
